--- a/GraphBasedQuerying/EntityGraph4EF6/EntityGraph4EF6.csproj
+++ b/GraphBasedQuerying/EntityGraph4EF6/EntityGraph4EF6.csproj
@@ -35,6 +35,10 @@
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="EntityGraph, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\GraphBasedQuerying\EntityGraph\bin\Release\EntityGraph.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -44,9 +48,11 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Expression2SqlVisitor.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Expression2DbExpressionVisitor.cs" />
     <Compile Include="Extensions\DbContextExtensions.cs" />
     <Compile Include="Extensions\GraphPathExtensions.cs" />
+    <Compile Include="Extensions\TypeMappingExtensions.cs" />
     <Compile Include="GraphPath.cs" />
     <Compile Include="GraphPathCollection.cs" />
     <Compile Include="GraphPathNode.cs" />
@@ -56,47 +62,12 @@
     <Compile Include="Mapping\PropertyMapping.cs" />
     <Compile Include="Mapping\TableMapping.cs" />
     <Compile Include="Mapping\TypeMapping.cs" />
-    <Compile Include="SQL\Join.cs" />
-    <Compile Include="SQL\Sql.cs" />
-    <Compile Include="SQL\LessThenExpr.cs" />
-    <Compile Include="SQL\LessThenEqualExpr.cs" />
-    <Compile Include="SQL\GreaterThenEqualExpr.cs" />
-    <Compile Include="SQL\GreaterThenExpr.cs" />
-    <Compile Include="SQL\OrExpr.cs" />
-    <Compile Include="SQL\NotEqualExpr.cs" />
-    <Compile Include="LoadWhereExpr.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryPlan.cs" />
     <Compile Include="SqlGraphShape.cs" />
-    <Compile Include="SQL\AndExpr.cs" />
-    <Compile Include="SQL\BinaryExpr.cs" />
-    <Compile Include="SQL\Case.cs" />
-    <Compile Include="SQL\Column.cs" />
-    <Compile Include="SQL\ColumnExpr.cs" />
-    <Compile Include="SQL\ColumnSelect.cs" />
-    <Compile Include="SQL\ConstantExpr.cs" />
-    <Compile Include="SQL\EqualExpr.cs" />
-    <Compile Include="SQL\Expr.cs" />
-    <Compile Include="SQL\InnerJoin.cs" />
-    <Compile Include="SQL\IsNotNull.cs" />
-    <Compile Include="SQL\LeftOuterJoin.cs" />
-    <Compile Include="SQL\SelectColumns.cs" />
-    <Compile Include="SQL\Table.cs" />
-    <Compile Include="SQL\UnaryExpr.cs" />
-    <Compile Include="SQL\When.cs" />
-    <Compile Include="SQL\WhereExpr.cs" />
     <None Include="packages.config" />
-    <None Include="TypeTreeEdge.cs" />
-    <None Include="TypeTreeGraph.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EntityGraph\EntityGraph.csproj">
-      <Project>{084ff212-41f6-46e1-a31c-9f76200ea2b7}</Project>
-      <Name>EntityGraph</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
